# tanmatsu-camera

./: .gitignore  Makefile  README.md  camera.md  long_exposure_research.md  microphone_inmp441.md
components/esp_cam_sensor_ov9281/: CMakeLists.txt  Kconfig  idf_component.yml
components/esp_cam_sensor_ov9281/sensors/ov9281/: ov9281.c
components/esp_cam_sensor_ov9281/sensors/ov9281/include/: ov9281.h  ov9281_types.h
components/esp_cam_sensor_ov9281/sensors/ov9281/private_include/: ov9281_regs.h  ov9281_settings.h
components/shine/: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig  avi_mux.c  avi_mux.h  bmp_writer.c  bmp_writer.h  camera_pipeline.c  camera_pipeline.h  camera_sensor.c  camera_sensor.h  config.c  config.h  fbdraw.c  fbdraw.h  hershey_font.h  icons.c  icons.h  idf_component.yml  intfs.h  main.c  microphone.c  microphone.h  photo.c  photo.h  splash.c  splash.h  video.c  video.h  viewer.c  viewer.h
main/focus/: autofocus.c  autofocus.h  dw9714p.c  dw9714p.h  focus_driver.c  focus_driver.h  focus_simulator.c
metadata/: metadata.json
scripts/: convert2mp4.sh
sdkconfigs/: tanmatsu
